@@ -351,7 +351,7 @@ if __name__ == '__main__':
     # check uri
     uri = config_options.get('url')
     if uri:
-        if not uri.startswith('bitcoin:'):
+        if not uri.startswith('bitcoindiamond:'):
             print_stderr('unknown command:', uri)
             sys.exit(1)
         config_options['url'] = uri
