@@ -300,7 +300,7 @@ class ElectrumWindow(App):
         if is_address(data):
             self.set_URI(data)
             return
-        if data.startswith('bitcoin:'):
+        if data.startswith('bitcoindiamond:'):
             self.set_URI(data)
             return
         # try to decode transaction
@@ -446,7 +446,7 @@ class ElectrumWindow(App):
         self.fiat_unit = self.fx.ccy if self.fx.is_enabled() else ''
         # default tab
         self.switch_to('history')
-        # bind intent for bitcoin: URI scheme
+        # bind intent for bitcoindiamond: URI scheme
         if platform == 'android':
             from android import activity
             from jnius import autoclass
