@@ -122,7 +122,7 @@ class PayToEdit(ScanQRTextEdit):
         self.payto_address = None
         if len(lines) == 1:
             data = lines[0]
-            if data.startswith("bitcoin:"):
+            if data.startswith("bitcoindiamond:"):
                 self.scan_f(data)
                 return
             try:
@@ -260,7 +260,7 @@ class PayToEdit(ScanQRTextEdit):
 
     def qr_input(self):
         data = super(PayToEdit,self).qr_input()
-        if data.startswith("bitcoin:"):
+        if data.startswith("bitcoindiamond:"):
             self.scan_f(data)
             # TODO: update fee
 
